--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -24,6 +24,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0px 200px;
     
 }
 
@@ -47,4 +48,22 @@ nav li {
 nav li a{
     text-decoration: none;
     color: text-primary;
+}
+
+/* Header related style */
+
+.header {
+
+    background-color: #FFF8F3;
+}
+
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+
+}
+.banner .profile-picture{
+    width: 584px;
+    height: 676px;
 }
