--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -96,6 +96,10 @@ nav li a{
 }
 
 /* Main section styles */
+main{
+    max-width: 1140px;
+    margin: 0px auto;
+}
 
 .section-title{
     color: var(--Dark-01, #181818);
@@ -117,5 +121,53 @@ nav li a{
     border-radius: 10px;
     background: #FFF8F3;
     padding: 130px;
-    margin-top: 130px 0px;
+    margin: 130px 0px;
+}
+
+.about-info-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.about-info{
+    color: var(--Dark-03, #757575);
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px; /* 150% */
+}
+.infodescription{
+
+    color: var(--Dark-02, #474747);
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 30px;
+}
+#what-i-do-desc{
+
+    padding: 30px 157px;
+    text-align: center;
+}
+
+.skills-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.skills-container img{
+    width: 44px;
+    height: 44px;
+}
+
+.skill-title{
+    color: var(--Dark-01, #181818);
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+}
+.skilldescription{
+    color: var(--Dark-03, #757575);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px; /* 175% */
 }
