--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -101,6 +101,10 @@ main{
     margin: 0px auto;
 }
 
+main section{
+    margin-top: 130px;
+}
+
 .section-title{
     color: var(--Dark-01, #181818);
     text-align: center;
@@ -151,7 +155,7 @@ main{
 
 .skills-container{
     display: flex;
-    justify-content: space-between;
+    gap: 24px;
 }
 
 .skills-container img{
@@ -170,4 +174,58 @@ main{
     font-size: 16px;
     font-weight: 400;
     line-height: 28px; /* 175% */
+}
+.skills{
+    padding: 33px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+/* Resume section design */
+
+.reume-column-title{
+    color: var(--Dark-01, #181818);
+    font-size: 20px;
+    font-weight: 700;
+
+}
+
+.resume-container{
+    display: flex;
+    gap:50px;
+}
+.resume-item-desc{
+    color: var(--Dark-03, #757575);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px; /* 175% */
+    max-width:511px;
+    margin-top: 0px;
+}
+
+.resume-item-instit{
+    color: var(--Dark-03, #757575);
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+
+.resume-item-title{
+
+    color: var(--Dark-02, #474747);
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.resume-container hr{
+    margin:20px
+}
+
+
+.download-cv{
+    text-align: center;
+    margin-top:50px;
 }
