--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -229,3 +229,64 @@ main section{
     text-align: center;
     margin-top:50px;
 }
+
+/* Footer style */
+footer{
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 200px;
+    margin-top: 100px;
+    gap: 100px;
+}
+
+.footer-column{
+    width: 50%;
+}
+
+.contact-form input textarea{
+    display: block;
+    margin-bottom: 24px;
+    padding: 18px 35px;
+    color: var(--Dark-03, #757575);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px; /* 175% */
+    border: 0px;
+
+
+}
+
+.text{
+    max-width: 461px;
+    max-height: 64px;
+    min-width: 400px;
+    min-height: 44px;
+    border-radius: 5px;
+    background: var(--White-Color, #FFF);
+    margin-bottom: 20px;
+}
+
+.email{
+    max-width: 461px;
+    max-height: 64px;
+    min-width: 400px;
+    min-height: 44px;
+    border-radius: 5px;
+    background: var(--White-Color, #FFF);
+    margin-bottom: 20px;
+}
+
+.contact-form textarea{
+    border-radius: 5px;
+    background: var(--White-Color, #FFF);
+    width: 461px;
+    height: 180px;
+    flex-shrink: 0;
+}
+
+.social-media a{
+    margin: 5px 10px;
+}
+.social-media{
+    justify-content: center;
+}
